--- a/client/components/App.scss
+++ b/client/components/App.scss
@@ -1,3 +1,5 @@
+$total_input_size: 100px;
+
 @mixin flex-center {
   display: flex;
   flex-direction: column;
@@ -14,10 +16,12 @@ html, body, #root {
   position: relative;
   height: 100%;
   width: 100%;
+  padding: 5px;
   @include flex-center;
 }
 
 .clientDetails {
+  // border: 1.5px solid silver;
   padding: 5vmin;
   width: 80%;
   height: 100%;
@@ -28,7 +32,33 @@ html, body, #root {
   }
 }
 
-.paymant {
-  padding: 5vmin;
+.payment {
+  padding: 5px;
   @include flex-center;
+  .line {
+    > *{
+      //all the direct children
+      margin: 0 5px;
+      flex: 1;
+    }
+
+    .paymentInput {
+      flex: 0 0 $total_input_size;
+      justify-content: flex-end;
+    }
+    margin: 0 -5px;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .TotalPayment {
+    height: 100%;
+    width: 100%;
+    > *{
+      width: $total_input_size;
+    }
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+  }
 }
