--- a/client/components/App.scss
+++ b/client/components/App.scss
@@ -7,12 +7,12 @@ $total_input_size: 100px;
   align-items: center;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+@import url('https://fonts.googleapis.com/css?family=Bitter');
 
 html, body, #root {
   padding: 0;
   margin: 0;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Bitter', serif;
   height: 100%;
 }
 .container {
@@ -35,6 +35,13 @@ html, body, #root {
   > * {
     width: 70%;
   }
+}
+
+.paymentContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 .payment {
@@ -75,7 +82,7 @@ html, body, #root {
     height: 100%;
     width: 100%;
     >*{
-      width: 40%
+      width: 50%
     }
   }
 }
