--- a/client/components/App.scss
+++ b/client/components/App.scss
@@ -38,35 +38,34 @@ html, body, #root {
 }
 
 .paymentContainer {
-  width: 100%;
+  width: 58%;
   height: 100%;
   display: flex;
   flex-direction: row;
 }
 
 .payment {
-  padding: 30px;
-  // background: #f5f5ff;
-  @include flex-center;
+  padding: 0 5px;
+  justify-content: top;
+  height: 100%;
+  width: 100%;
   .line {
-    > *{
-      //all the direct children
-      margin: 0 5px;
-      flex: 1;
-    }
-
-    .paymentInput {
-      flex: 0 0 $total_input_size;
-      justify-content: flex-end;
-    }
-    margin: 0 -5px;
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
+    > *{
+      width: 40%;
+      min-width: 90px;
+      max-width: 300px;
+      padding: 0 3px;
+    }
   }
 
   .TotalPayment {
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: flex-start;
     > *{
       width: $total_input_size;
     }
