--- a/client/components/App.scss
+++ b/client/components/App.scss
@@ -41,7 +41,7 @@ html, body, #root {
   width: 58%;
   height: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .payment {
@@ -54,7 +54,7 @@ html, body, #root {
     flex-direction: row;
     justify-content: flex-end;
     > *{
-      width: 40%;
+      width: 50%;
       min-width: 90px;
       max-width: 300px;
       padding: 0 3px;
@@ -65,13 +65,9 @@ html, body, #root {
     height: 100%;
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     > *{
-      width: $total_input_size;
     }
-    display: flex;
-    align-items: flex-end;
-    flex-direction: column;
   }
 
   .Submit{
