--- a/client/components/App.scss
+++ b/client/components/App.scss
@@ -45,29 +45,36 @@ html, body, #root {
 }
 
 .payment {
-  padding: 0 5px;
+  // padding: 10px 0;
   justify-content: top;
   height: 100%;
   width: 100%;
-  .line {
+  .paymentLabels{
+    height: 100%;
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-around;
     > *{
-      width: 50%;
-      min-width: 90px;
-      max-width: 300px;
-      padding: 0 3px;
+      // border: 1px solid black;
     }
   }
+  .PaymentBlock {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    // border-top: 4px groove  silver;
+    > *{
+      padding: 0 5px;
+    }
+  }
+}
 
   .TotalPayment {
     height: 100%;
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    > *{
-    }
+    flex-direction: column;
   }
 
   .Submit{
@@ -80,4 +87,3 @@ html, body, #root {
       width: 50%
     }
   }
-}
