added table component that can show informatino that passed to it through props

--- a/client/components/control_panel/Control_panel.scss
+++ b/client/components/control_panel/Control_panel.scss
@@ -33,21 +33,14 @@
     paddin: 10px;
     font-size: 150%;
 
-    .headers {
+    .line {
       @include flex-row;
     }
+  }
 
-    .invoiceOpend {
-      @include flex-row;
-    }
-
-    .invoiceClosed {
-      @include flex-row;
-    }
-
-    .MoneyTransferd {
-      @include flex-row;
-    }
+  .button {
+    padding: 15px;
+    flex: 1 1 0;
   }
 
 }
